# ml-21

./: pyproject.toml
0-baseline/: 1_classes_and_functions.ipynb
0-baseline/elfarol/: agents.py  hypotheses.py
1-pipelines/data/raw/: cancer_data_uncleaned.csv
1-pipelines/notebooks/: 1-preprocess.ipynb  1_solutions.ipynb  2-gridsearch.ipynb  3-excersices.ipynb  3_excercises.ipynb  lesson1.ipynb
1-pipelines/src/data/: make_dataset.py
1-pipelines/src/visualization/: visualize.py
2-regularization/notebooks/: 0_metrics.ipynb  0_zb_metrics.ipynb  1_zb_regularization.ipynb  2_kernels.ipynb  2_zb_kernels.ipynb  lesson2_zb.ipynb
3-deep_networks/: LICENSE  README.md  setup.py  test_excercises.py
3-deep_networks/.devcontainer/: Dockerfile  devcontainer.json
3-deep_networks/notebooks/: 00_data_preprocessing.ipynb
4-tuning_dnn/: tuning_excercises.ipynb  utils.py
4-vision/: README.md  setup.py
4-vision/notebooks/: 01_datagenerators.ipynb
5-vision/: tox.ini
5-vision/docs/: Makefile  conf.py
5-vision/notebooks/: 00_convolutions_and_pooling.ipynb
6-timeseries/: timeseries.ipynb
7-nlp/: lesson7.ipynb
deep1/: Makefile  pyproject.toml  requirements.txt  tox.ini
deep1/docs/: conf.py
deep1/notebooks/: 00_data_preprocessing.ipynb  01_basemodel.ipynb  02_alternative_networks.ipynb  03_manual_hypertuning.ipynb  04_ray_hypertuning.ipynb  05_excercises.ipynb
deep1/src/data/: make_dataset.py
deep1/src/models/: hypermodel.py
deep1/src/visualization/: visualize.py
vision/: LICENSE  Makefile
vision/docs/: index.rst  make.bat
(+15 files in other folders)
